# stella

./: .env.example  .gitignore  .stella.conf.yml  ADAPTATION_STELLA.md  AUDIT.md  AUDIT_COMPLET_STELLA.md  AUDIT_COMPLET_STELLA_2026-02-25.md  AUDIT_STELLA_2026.md  GUIDE_UTILISATION.md  MANIFEST.in  README.md  STELLA_AUDIT_PROPOSITIONS.md  STELLA_ROADMAP.md  UPGRADE_PLAN_30J.md  main.py  pyproject.toml  pytest.ini  requirements.txt  scripts_run_ci.py  settings.toml  stella.py  temp_validate.py  test_components_temp.py  user_module.py
.claude/: settings.local.json
agent/: action_schema.py  agent.py  ast_merge.py  auth.py  auto_agent.py  bootstrap.py  changelog.py  chat_session.py  code_intelligence.py  config.py  critic.py  decision_normalizer.py  dependency_graph.py  deps.py  dev_task.py  doctor.py  erp_knowledge.py  eval_runner.py  event_logger.py  executor.py  generation_quality.py  git_tools.py  global_memory.py  health_check.py  llm.py  llm_interface.py  loop_controller.py  mcp_client.py  memory.py  migration_generator.py  migration_helper.py  orm_parser.py  partial_edits.py  patcher.py  planner.py  pr_ready.py  progress.py  project_map.py  project_scan.py  quality.py  (+11 more)
bench/: bench_json_stability.py  bench_latency.py  bench_model_comparison.py  bench_stella_qa.py
eval/: last_report.json  tasks.json  tasks_code_edit.json  tasks_code_edit_prod.json
frontend/: App.jsx
stella_ai/: __init__.py  _version.py  analytics.py  args.py  args_formatter.py  commands.py  copypaste.py  deprecated.py  editor.py  exceptions.py  gui.py  help.py  history.py  io.py  linter.py  (+18 more)
(+183 files in other folders)
