[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stella-agent"
version = "0.1.0"
description = "Local coding agent on Ollama/DeepSeek"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31.0",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
  "pytest>=7.4.0",
  "black>=23.7.0",
  "ruff>=0.0.285",
  "openai>=1.0.0",
  "duckduckgo-search>=6.0.0"
]

[project.scripts]
stella-agent = "stella:main"
