[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stella-agent"
description = "Stella is a custom AI pair programming CLI based on stella"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dynamic = ["dependencies", "version"]

[project.scripts]
stella = "stella_ai.main:main"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["stella_ai"]

[tool.setuptools_scm]
version_file = "stella_ai/_version.py"
